--- a/escom-bpm-web/src/main/webapp/view/admin/objects-expl.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/objects-expl.xhtml
@@ -1,43 +1,106 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui"                
-                template="/view/templ/templ-dlg.xhtml">
-        
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                template="/view/templ/templ-frm.xhtml">
+
     <ui:param name="_explorerHeader" value="#{''.concat(bundle.Administation).concat(': ').concat(bundle.Objects)}"/>
-    
-    <ui:param name="_bean" value="#{metadatesBean}"/>
+    <ui:param name="_bean" value="#{metadatesBean}"/>      
 
-    <ui:define name="menuActions" >
-    </ui:define>   
-        
-    <ui:define name="toolbarComponents" >
-    </ui:define>
+    <ui:define name="centerContent">
+        <h:form id="mainFRM" style="font-size: 90%; height: 100%;" styleClass="ui-grid-col-12" onkeypress="checkEsc();">
+            <p:hotkey bind="esc" id="hotskey" immediate="true" onstart="checkEsc();"/>            
 
-    <ui:define name="centerFormHeader">
-        <p:outputLabel value="#{bundle.Settings}" />
-    </ui:define>
-    
-    <ui:define name="leftFormHeader">
-        <p:outputLabel value="#{bundle.Objects}" />
-    </ui:define>        
-    
-    <ui:define name="leftFormContent">
-        <p:dataTable value="#{metadatesBean.allItems}" rowKey="#{item.id}" selectionMode="single"
-                     selection="#{metadatesBean.selectedObject}" var="item">
-            <p:ajax event="rowSelect" update="mainFRM:mainGrid" listener="#{metadatesBean.onSelectedItem}"  />                
+            <script type="text/javascript">
+                $(function () {
+                    $(':input').bind('keydown', 'esc', function () {
+                        checkEsc();
+                        return false;
+                    });
+                });
+            </script>
 
-            <p:column headerText="ID" width="15">
-                            #{item.id}
-            </p:column>
-            <p:column headerText="#{bundle.Object}">
-                #{metadatesBean.getBundleName(item)}
-            </p:column>
-        </p:dataTable>
-    </ui:define>
-    
-    <ui:define name="centerFormContent">
-        <ui:include src="/view/admin/objects-right.xhtml"/>
-        <ui:include src="/view/common/confirm-dlg.xhtml"/>
+            <p:panel rendered="#{_bean != null}" styleClass="ui-grid-col-12 without-spaces" style="height: 100%;" >
+                <f:facet name="header">
+                    #{_bean.getFormHeader()}
+                </f:facet>
+                <f:facet name="actions">
+                    <p:commandLink id="btnClose" type="button" title="#{bundle.Close}" immediate="true" styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"
+                                   rendered="#{_bean.getSourceBeanId() != null}"
+                                   disabled="#{!_canClose}"
+                                   actionListener="#{_bean.onCancelItemSave()}" 
+                                   onclick="if (itemChange == 1) {
+                                               onChangeItem();
+                                           }
+                                           sendFormSize();">
+                        <h:outputText styleClass="ui-icon ui-icon-closethick" />
+                    </p:commandLink>
+                </f:facet>               
+
+                <p:panelGrid layout="grid" columns="2" columnClasses="ui-grid-col-4 col-padding, ui-grid-col-8 col-padding" 
+                             styleClass="ui-grid-col-12 without-spaces">
+
+                    <p:panel id="westFRM" rendered="#{_bean.isWestShow()}" styleClass="ui-grid-col-12 without-spaces" style="height: 100%;">
+                        <f:facet name="header">
+                            <p:outputLabel value="#{bundle.Objects}" />
+                        </f:facet>
+                        <p:dataTable value="#{metadatesBean.allItems}" rowKey="#{item.id}" selectionMode="single"
+                                     selection="#{metadatesBean.selectedObject}" var="item">
+                            <p:ajax event="rowSelect" update="mainFRM:mainGrid" listener="#{metadatesBean.onSelectedItem}"  />                
+
+                            <p:column headerText="ID" width="15">
+                                #{item.id}
+                            </p:column>
+                            <p:column headerText="#{bundle.Object}">
+                                #{metadatesBean.getBundleName(item)}
+                            </p:column>
+                        </p:dataTable>
+                    </p:panel>
+
+                    <p:panel id="centerFRM" styleClass="ui-grid-col-12 without-spaces" style="height: 100%;">
+                        <f:facet name="header">
+                            <p:outputLabel value="#{bundle.Settings}" />
+                        </f:facet>
+                        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">                            
+
+                            <p:toolbar id="explToolBar">
+                                <f:facet name="left">
+                                    <ui:insert name="toolbarComponents"/>
+                                </f:facet>
+                                <f:facet name="right">
+                                    <ui:insert name="specToolButtons"/>
+                                    <p:spacer width="10"/>
+                                    <p:menuButton value="#{bundle.Actions}" icon="ui-icon-gear">
+                                        <ui:insert name="menuActions" />  
+                                        <p:separator />
+                                        <p:menuitem value="#{bundle.ManualBook}" icon="ui-icon-help" rendered="#{_isShowHelp}" 
+                                                    onstart="PF('statusDialog').show()"
+                                                    oncomplete="PF('statusDialog').hide();"
+                                                    actionListener="#{sessionBean.onViewHelp()}"/>
+                                    </p:menuButton>
+                                </f:facet>
+                            </p:toolbar>  
+
+                            <p:messages id="messages" showDetail="false" closable="true" styleClass="ui-grid-col-12 without-spaces">
+                                <p:autoUpdate />
+                            </p:messages>
+
+                            <ui:include src="/view/admin/objects-right.xhtml"/>
+                            <ui:include src="/view/common/confirm-dlg.xhtml"/>
+
+                        </p:panelGrid>
+                    </p:panel>
+                </p:panelGrid>
+            </p:panel>
+
+            <ui:insert name="form_scripts"/>
+
+            <ui:include src="/view/common/confirm-dlg.xhtml"/>
+            <p:remoteCommand name="formSize" actionListener="#{_bean.onFormSize()}" />
+            <p:remoteCommand name="onChangeItem" immediate="true" actionListener="#{_bean.onItemChange()}" oncomplete="return itemChange = 0;"/> 
+        </h:form>
+
     </ui:define>
 
 </ui:composition>
