--- a/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
@@ -32,7 +32,7 @@
         
     <!-- специфичные поля поиска -->
     <ui:define name="searche">
-        <p:outputLabel value="#{bundle.Code}"/>
+        <p:outputLabel value="#{bundle.Code}:"/>
         <h:panelGroup styleClass="ui-grid-col-12">
             <div class="ui-inputgroup">
                 <p:inputText id="codeSearche" title="#{bundle.HelpSearcheContext}" widgetVar="searchCode"
