--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
@@ -54,7 +54,7 @@
         
     <!-- специфичные поля поиска -->
     <ui:define name="searche">
-        <p:outputLabel value="#{bundle.Post}"/>
+        <p:outputLabel value="#{bundle.Post}:"/>
         <h:panelGroup styleClass="ui-grid-col-12">
             <div class="ui-inputgroup">
                 <p:inputText title="#{bundle.HelpSearcheContext}" id="searchPost" widgetVar="searchPost"
@@ -67,7 +67,7 @@
             </div>
         </h:panelGroup>
 
-        <p:outputLabel value="#{bundle.SecondName}"/>
+        <p:outputLabel value="#{bundle.SecondName}:"/>
         <h:panelGroup styleClass="ui-grid-col-12">
             <div class="ui-inputgroup">
                 <p:inputText title="#{bundle.HelpSearcheContext}" id="searchSecondName" widgetVar="searchSecondName"
