--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -38,16 +38,18 @@
                               filter="true" filterMatchMode="startsWith" styleClass="ui-grid-col-12">
             <f:selectItems value="#{docTypeBean.findAll()}" var="item" itemLabel="#{item.getName()}" itemValue="#{item}"/>
         </p:selectCheckboxMenu>
-
-        <p:outputLabel value="#{bundle.Number}"/>
-        <div class="ui-inputgroup">
-            <p:inputText title="#{bundle.HelpSearcheContext}" value="#{_bean.model.numberSearche}"
-                     widgetVar="docNumberSearche"
-                     styleClass="ui-grid-col-12"
-                     onkeypress="keyPress();">
-            </p:inputText>
-            <p:commandButton styleClass="btnClear" icon="ui-icon-close" onclick="PF('docNumberSearche').jq.val('');"/>
-        </div>
+        
+        <p:outputLabel value="#{bundle.Number}:"/>
+        <h:panelGroup styleClass="ui-grid-col-12">
+            <div class="ui-inputgroup">
+                <p:inputText title="#{bundle.HelpSearcheContext}" value="#{_bean.model.numberSearche}"
+                         widgetVar="docNumberSearche"
+                         styleClass="ui-grid-col-12"
+                         onkeypress="keyPress();">
+                </p:inputText>
+                <p:commandButton styleClass="btnClear" icon="ui-icon-close" onclick="PF('docNumberSearche').jq.val('');"/>
+            </div>
+        </h:panelGroup>
         
         <p:selectBooleanCheckbox itemLabel="#{bundle.DateDoc}" widgetVar="cbDateDoc"
                                  title="#{bundle.SearcheDateDoc}" 
@@ -55,10 +57,9 @@
             <p:ajax event="change" update="pnDateDocSearche"/>
         </p:selectBooleanCheckbox>   
         
-        <h:panelGroup id="pnDateDocSearche"> 
-            <p:panelGrid columns="2" columnClasses="col10r ui-grid-col-1" 
-                         rendered="#{_bean.model.dateDocSearche}">
-                #{bundle.With}
+        <h:panelGroup id="pnDateDocSearche" styleClass="ui-grid-col-12"> 
+            <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-1, ui-grid-col-11" rendered="#{_bean.model.dateDocSearche}" styleClass="ui-grid-col-12">
+                <p:outputLabel value="#{bundle.With}:"/>
                 <p:calendar value="#{_bean.model.dateDocStart}" id="dateDocStart" 
                             widgetVar="dateDocStartSearche"
                             navigator="true" yearRange="c-120:c+20"
@@ -68,9 +69,8 @@
                             disabled="#{!_bean.model.dateDocSearche}">
                 </p:calendar>
             </p:panelGrid>
-            <p:panelGrid columns="2" columnClasses="col10r ui-grid-col-1" 
-                         rendered="#{_bean.model.dateDocSearche}">
-                #{bundle.At}
+            <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-1, ui-grid-col-1" rendered="#{_bean.model.dateDocSearche}" styleClass="ui-grid-col-12">
+                <p:outputLabel value="#{bundle.At}:" />
                 <p:calendar value="#{_bean.model.dateDocEnd}" id="dateDocEnd"
                             widgetVar="dateDocEndSearche"
                             navigator="true" yearRange="c-120:c+20"
@@ -82,7 +82,7 @@
             </p:panelGrid>
         </h:panelGroup>
         
-        <p:outputLabel value="#{bundle.Partner}"/>
+        <p:outputLabel value="#{bundle.Partner}:"/>
         <p:selectOneMenu value="#{_bean.model.partnerSearche}" filter="true" converter="partnersConvertor" 
                         widgetVar="partnerSearche"
                         styleClass="ui-grid-col-12">
@@ -118,13 +118,13 @@
             <p:commandButton value="#{bundle.CreateProcess}" process="@this"
                              styleClass="ui-confirmdialog-yes" icon="ui-icon-check"
                              actionListener="#{_bean.createProcess()}"
-                             update="mainFRM:centerFRM #{_updates}"
+                             update="mainFRM #{_updates}"
                              onclick="PF('CreateProcessDlg').hide();"
                              oncomplete="initDND()">
             </p:commandButton>
             <p:commandButton value="#{bundle.Cancel}" process="@this" 
                              styleClass="ui-confirmdialog-no" icon="ui-icon-close"
-                             update="mainFRM:centerFRM"
+                             update="mainFRM"
                              onclick="PF('CreateProcessDlg').hide();"
                              oncomplete="initDND()"/>
         </p:confirmDialog>
@@ -180,7 +180,7 @@
         <p:separator />
         <p:menuitem icon="ui-icon-folder-open" value="#{bundle.ShowInFolder}" 
                     rendered="#{item.getClass().getSimpleName() == 'Doc'}" 
-                    update="mainFRM:westFRM mainFRM:centerFRM"
+                    update="westFRM mainFRM"
                     actionListener="#{_bean.onShowDocInFolder(item)}"
                     oncomplete="initDND()"/>        
     </ui:define>
@@ -196,22 +196,19 @@
                 </p:treeNode>
 
                 <p:ajax event="select" listener="#{_bean.onProcNodeSelect}"
-                        update="mainFRM:centerFRM #{_updates}"
+                        update="mainFRM #{_updates}"
                         oncomplete="initDND()"/>
             </p:tree>
             <pe:tooltip for="procTree" value="#{msg.DragDropDocumentCreateProcess}" mouseTracking="true" myPosition="top left" adjustX="10" adjustY="10" 
                 styleClass="qtip qtip-rounded qtip-shadow" header="#{bundle.Info}"/>
         </p:tab>
-    </ui:define>
-    
-    <ui:define name="addMenuCreates" >        
-    </ui:define>
+    </ui:define>    
     
     <ui:define name="addToolButtons">  
         <span class="ui-separator">
             <span class="ui-icon ui-icon-grip-dotted-vertical" />
         </span>
-        <p:menuButton value="#{bundle.Reports}" >
+        <p:menuButton icon="ui-icon-print" title="#{bundle.Reports}" >
             <p:menuitem value="#{bundle.DocReportCountTypes}" 
                         icon="ui-icon-note"
                         onstart="PF('statusDialog').show()"
