--- a/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
@@ -20,8 +20,7 @@
         </f:facet>
         
         <p:ajax event="rowSelect" update="mainFRM:explToolBar" oncomplete="initDND();" />
-        <p:ajax event="rowDblselect" 
-                listener="#{_bean.onRowDblClckOpen}"
+        <p:ajax event="rowDblselect" listener="#{_bean.onRowDblClckOpen}"
                 oncomplete="document.getElementById('mainFRM:viewCardBtn').click();"/>
         <p:ajax event="rowSelectCheckbox" update="mainFRM:explToolBar" oncomplete="initDND()"/>
         <p:ajax event="rowUnselectCheckbox" update="mainFRM:explToolBar" oncomplete="initDND()"/>
@@ -38,7 +37,7 @@
             <p:commandLink value="#{item.nameEndElipse}" title="#{item.name}" 
                            rendered="#{_bean.isItemTreeType(item)}"
                            actionListener="#{_bean.onLoadGroupContent(item)}"
-                           update="mainFRM:centerFRM mainFRM:westFRM #{_updates}" 
+                           update="mainFRM westFRM #{_updates}" 
                            oncomplete="initDND()"/>
             <p:commandLink value="#{item.nameEndElipse}" title="#{item.name}"
                            rendered="#{!_bean.isItemTreeType(item) and item.getClass().getSimpleName() != 'Doc'}"
@@ -56,7 +55,7 @@
             <h:graphicImage id="iconDone" value="#{item.state.currentState.icon}" title="#{stateBean.getBundleName(item.state.currentState)}"/>            
         </p:column>
         
-        <p:column headerText="#{bundle.DateChange}" width="90" priority="3"
+        <p:column headerText="#{bundle.DateChange}" width="90" styleClass="columnExt1"
                   rendered="#{_showDateChange != false}"
                   sortBy="#{item.dateChange}">
             <h:outputLabel value="#{item.dateChange}">
@@ -64,7 +63,7 @@
             </h:outputLabel>
         </p:column>
 
-        <p:column headerText="#{bundle.DateCreate}" width="90" priority="3"
+        <p:column headerText="#{bundle.DateCreate}" width="90" styleClass="columnExt2"
                   rendered="#{_showDateCreate != false}"
                   sortBy="#{item.dateCreate}">
             <h:outputLabel value="#{item.dateCreate}">
@@ -72,17 +71,17 @@
             </h:outputLabel>
         </p:column>
 
-        <p:column headerText="#{bundle.Owner}" priority="4"
+        <p:column headerText="#{bundle.Owner}" styleClass="columnExt3"
                   rendered="#{_showAuthor == true}"
                   sortBy="#{item.author.shortFIO}">
             #{item.author.shortFIO}
         </p:column>
 
-        <p:column headerText="Id" sortBy="#{item.id}" width="25" priority="5">
+        <p:column headerText="Id" sortBy="#{item.id}" width="25" styleClass="columnExt3" >
             <h:outputText value="#{item.id}"/>
         </p:column>
 
-        <p:column style="text-align: center;" width="95" >
+        <p:column style="text-align: center;" width="75" >
             <p:splitButton  value="#{bundle.Select}"
                             rendered="#{!item.deleted and item.actual and _bean.selectorViewMode}" 
                             action="#{_bean.onSelect(item)}">                
@@ -111,7 +110,7 @@
 
                 <p:menuitem icon="ui-icon-trash" value="#{bundle.MoveToTrash}"
                             disabled="#{item.id == 0}"
-                            update="mainFRM:westFRM mainFRM:centerFRM"
+                            update="westFRM mainFRM"
                             actionListener="#{_bean.onMoveContentToTrash(item)}"
                             oncomplete="initDND()">
                     <p:confirm header="#{bundle.MoveToTrash}" message="#{bundle.ConfirmMoveToTrash}" icon="ui-icon-alert" />
@@ -124,7 +123,7 @@
                 <p:menuitem icon="ui-icon-scissors" value="#{bundle.DeleteFromFavorites}" 
                             rendered="#{_bean.isFavoriteSelected()}"
                             actionListener="#{_bean.onDelContentFromFavorites(item)}"
-                            update="mainFRM:centerFRM"
+                            update="mainFRM"
                             oncomplete="initDND()"/>
                 <p:separator/>
                 <p:menuitem icon="ui-icon-key" value="#{bundle.Administation}"
@@ -135,14 +134,14 @@
             <p:splitButton value="#{bundle.Delete}"  
                             rendered="#{item.deleted}"
                             disabled="#{!sessionBean.userAdmin}"
-                            update="mainFRM:centerFRM mainFRM:westFRM"
+                            update="mainFRM westFRM"
                             actionListener="#{_bean.onDeleteContentFromTrash(item)}"
                             onstart="PF('statusDialog').show()"
                             oncomplete="PF('statusDialog').hide(); initDND()">
                 <p:confirm header="#{bundle.ConfirmDelete}" message="#{bundle.OperationIsNotReversible}" icon="ui-icon-alert" />
                 <p:menuitem value="#{bundle.Restore}"
                             icon="ui-icon-arrowreturnthick-1-w"
-                            update="mainFRM:centerFRM mainFRM:westFRM"
+                            update="mainFRM westFRM"
                             actionListener="#{_bean.onRestoreContentFromTrash(item)}"
                             onstart="PF('statusDialog').show()"
                             oncomplete="PF('statusDialog').hide(); initDND()">
