--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree-toolbar.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree-toolbar.xhtml
@@ -4,7 +4,7 @@
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
     
-    <p:defaultCommand target="mainFRM:accord:btnTreeSearche" />
+    <p:defaultCommand target="westFRM:accord:btnTreeSearche" />
     
     <p:toolbar id="toolbarTree" styleClass="ui-grid-col-12">
         <p:toolbarGroup styleClass="ui-grid-col-12" rendered="#{_bean.tree != null}">
@@ -12,18 +12,18 @@
                     <p:commandButton icon="ui-icon-refresh" title="#{bundle.Refresh}"
                                      style="font-size: 90%;"
                                      actionListener="#{_bean.onReloadTreeItems()}"
-                                     update="mainFRM:westFRM mainFRM:centerFRM"
+                                     update="westFRM mainFRM"
                                      onstart="PF('statusDialog').show()"
                                      oncomplete="PF('statusDialog').hide(); initDND()"/>
                     <span class="ui-separator">
                         <span class="ui-icon ui-icon-grip-dotted-vertical" />
                     </span>
                     <p:commandButton icon="ui-icon-folder-open" title="#{bundle.ExpandTree}"
-                                     update="mainFRM:westFRM" oncomplete="initDND()"
+                                     update="westFRM" oncomplete="initDND()"
                                      style="font-size: 90%;"
                                      actionListener="#{_bean.onExpandTree()}"/>
                     <p:commandButton icon="ui-icon-folder-collapsed" title="#{bundle.CollapseTree}"
-                                     update="mainFRM:westFRM" oncomplete="initDND()"
+                                     update="westFRM" oncomplete="initDND()"
                                      style="font-size: 90%;"
                                      actionListener="#{_bean.onCollapseTree()}"/>
                     <span class="ui-separator">
@@ -35,7 +35,7 @@
                                      style="font-size: 90%;"
                                      onstart="PF('statusDialog').show()"
                                      oncomplete="PF('statusDialog').hide(); initDND();"
-                                     update="mainFRM:accord:tree mainFRM:accord:toolbarTree mainFRM:centerFRM #{_updates}"
+                                     update="westFRM:accord:tree westFRM:accord:toolbarTree mainFRM #{_updates}"
                                      actionListener="#{_bean.onMoveTreeItemToTrash()}">
                         <p:confirm header="#{bundle.ConfirmDelete}" message="#{bundle.AreYouSure}" icon="ui-icon-alert" />
                     </p:commandButton>
@@ -47,7 +47,7 @@
                     </p:inputText>
                     <p:commandButton id="btnTreeSearche" title="#{bundle.Searche}" icon="ui-icon-search"
                                      disabled="#{!_bean.isShowTree()}"
-                                     update="mainFRM:westFRM mainFRM:centerFRM #{_updates}"
+                                     update="westFRM mainFRM #{_updates}"
                                      actionListener="#{_bean.onSearcheInTree()}" style="font-size: 90%;" 
                                      oncomplete="initDND()">
                     </p:commandButton>
